--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -18,15 +18,15 @@ en:
       unconfirmed: "You have to confirm your email address before continuing."
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "Orion Confirmation instructions"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "Orion Reset password instructions"
       unlock_instructions:
         subject: "Unlock instructions"
       email_changed:
-        subject: "Email Changed"
+        subject: "Orion Email Changed"
       password_change:
-        subject: "Password Changed"
+        subject: "Orion Password Changed"
     omniauth_callbacks:
       failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
       success: "Successfully authenticated from %{kind} account."
